anchor shift href fixed

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -41,7 +41,7 @@ body {
 
 
 .dev-exp {
-  margin-top: calc(2* (var(--font-size-big) + var(--size-39)));
+  padding-top: calc(2* (var(--font-size-big) + var(--size-39)));
 
 }
 
